--- a/Admin-Driver/angular.json
+++ b/Admin-Driver/angular.json
@@ -84,8 +84,7 @@
             "tsConfig": "tsconfig.spec.json",
             "assets": [
               "src/favicon.ico",
-              "src/assets/logo.png",
-              "src/app/Components/Images/logo.png"
+              "src/assets"
             ],
             "styles": [
               "src/styles.css"
